# TinyGPT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
axum-backend/: Cargo.toml
axum-backend/src/: errors.rs  main.rs  server.rs
ml_engine/: .gitignore  README.md  pyproject.toml  run.bat
ml_engine/experimental_scripts/: llm_trials.ipynb
ml_engine/tests/: test.py
note_books/: stage_1.ipynb  stage_2.ipynb  stage_3.ipynb  stage_4.ipynb  stage_5.ipynb
src/tiny_gpt/: __init__.py  data_loader.py  env.py  gpt_model.py  io_utils.py  self_attention.py  text_generation.py  tokenizer.py
