[project]
name = "tiny_gpt"
version = "0.1.0"
description = "A module for functions and classes needed to make LLM model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]
[tool.setuptools.packages.find]
where = ["src"]
