[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "tiny_gpt"
authors = [
    { name = "Kartik Kanugo", email = "karthik.kanugo@gmail.com" },
]
description = "Simple gpt module for learning predictions"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: Windows",
    "Programming Language :: Python",
]
dynamic = ["dependencies", "readme", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }
version = { attr = "tiny_gpt.__version__.version" }


[tool.setuptools.packages.find]
where = ["tiny_gpt"]
include = ["*"]
